# chip8

./: .editorconfig  .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  pyproject.toml
doc/: Doxyfile.in  Software_Requirements_and_Design_Specification.md  instruction_audit.md  todo.md
doc/adr/: ADR-001 — Overall Architecture  ADR-002 — Use Qt Designer for User Interface Definition  ADR-003 — Use a Controller to Coordinate the Application.md  ADR-004 — Use a Shared Instruction Decoder.md  ADR-005 — Represent the Display Using a NumPy Framebuffer and QImage Rendering.md  ADR-006 — Use CMake as the Project Build Interface.md  ADR-007 — Use  as the Single Source of Project Configuration.md  ADR-008 — Naming Conventions for Implementation Classes  README.md
doc/srds/: Software_Requirements_and_Design_Specification.md
roms/tests/: bnnn_multiple.ch8  bnnn_rediscover.ch8  bnnn_single.ch8
src/: main.py
src/audio/: audiodevice.py  beeper.py  squarewavegenerator.py
src/chip8/: __init__.py  __main__.py  exceptions.py
src/controller/: __init__.py  applicationlogreporter.py  bufferedfilesink.py  codeanalysis.py  controller.py  diagnostic.py  diagnostics.py  emulatorconfiguration.py  executiontracereporter.py  keyboardmap.py  logging.py  sessionheader.py
src/emulator/: chip8framebuffer.py  chip8keyboard.py  chip8machine.py  chip8memory.py  chip8registers.py  chip8stack.py  chip8timers.py  chip8types.py  constants.py  instruction.py  stepresult.py  tracerecord.py  types.py
src/gui/: __init__.py  codetablemodel.py  configdialog.py  displaywidget.py  keyboarddialog.py  keyboardmappingdialog.py  mainwindow.py  memorytablemodel.py
src/gui/ui/: configdialog.ui  keyboardmappingdialog.ui  mainwindow.ui
tests/: __init__.py  helpers.py
tests/unit/: test_framebuffer.py  test_instruction.py  test_keyboard.py  test_machine.py  test_memory.py  test_registers.py  test_smoke.py  test_stack.py  test_timers.py
tests/unit/audio/: test_audiodevice.py  test_beeper.py
tests/unit/controller/: test_codeanalysis.py
tests/unit/opcodes/: test_add.py  test_call.py  test_draw.py  test_instruction.py  test_jump.py  test_keyboard.py  test_load.py  test_logic.py  test_memory.py  test_random.py  test_shift.py  test_skip.py  test_system.py  test_timer.py
